--- a/Visibility and z-index.html
+++ b/Visibility and z-index.html
@@ -7,18 +7,25 @@
     <title>Visiblity and z-index</title>
     <style>
         .box{
-            width: 170px;
-            height: 170px;
+            width: 70px;
+            height: 70px;
             border: 2px solid black;
         }
         #box-1{
+            position: relative;
+            top: 50px;
             background-color: red;
+            z-index: 1;
         }
         #box-2{
+            position: relative;
+            top: 20px;
             /* It will hide the element but will show its empty space */
             /* visibility: hidden;  */
             /* It will hide the element and remove its space*/
             /* display: none; */
+            /* z-index: will work only for position relative absolute sticky or fixed */
+            /* jiski bhi z-index zyada hogi vo box upar aayega dusre ke */
             background-color: green;
         }
         #box-3{
