--- a/Gym website/Gym.html
+++ b/Gym website/Gym.html
@@ -12,9 +12,11 @@
         body {
             margin: 0px;
             padding: 0px;
+            height: 100vh;
+            width: 100vw;
             background-image: url('gym\ bg.jpg');
             background-repeat: no-repeat;
-            background-attachment: fixed;
+            /* background-attachment: fixed; */
             /* background-position: center; */
             background-size: cover;
             color: white;
