--- a/Javascript/7.html
+++ b/Javascript/7.html
@@ -56,7 +56,7 @@
     <button id="btn" onclick="toggleHide()">Show/Hide</button>
     <script>
         let para = document.getElementById('para');
-        para.addEventListener('mouseover', function run() {
+        para.addEventListener('mouseover',()=> {
             console.log('Mouse Inside')
         });
 
